# vice_emu

ffmpeg-msvc/vice/src/arch/win32/: generate_msvc10_ffmpeg_project.bat
ffmpeg-msvc/vice/src/arch/win32/msvc/: Makefile.am  ffmpeg-config.h  ide-config.h  x264-config.h
ffmpeg-msvc/vice/src/arch/win32/vs_tmpl/: Makefile.am  avcodec.tmpl  avfilter.tmpl  avformat.tmpl  mkmsvc.c  vice.tmpl  x264encoder.tmpl  x64.tmpl
ffmpeg-msvc/vice/src/lib/libffmpeg/libavcodec/: 4xm.c  aacdec.c  alac.c  amrnbdec.c  amrwbdec.c  apedec.c  asvdec.c  asvenc.c  avdct.c  codec_desc.c  dvbsubdec.c  dvenc.c  evrcdec.c  faanidct.c  ffv1dec.c  ffv1enc.c  g726.c  huffyuvdec.c  huffyuvenc.c  jpeg2000dec.c  metasound.c  mpegvideo.h  nellymoserenc.c  snowdec.c  snowenc.c  utils.c  vp3.c  wmaenc.c  wmalosslessdec.c  wmavoice.c
ffmpeg-msvc/vice/src/lib/libffmpeg/libavfilter/: af_biquads.c  vf_fieldmatch.c  vf_scale.c  vf_showinfo.c
ffmpeg-msvc/vice/src/lib/libffmpeg/libavformat/: adtsenc.c  avidec.c  matroskadec.c  mov.c  rtpdec_mpeg4.c  rtpdec_qdm2.c  subfile.c  thp.c
v2.4.29/vice/src/arch/sdl/: pci-drv.c
v2.4.31/vice/src/c64/cart/: cs8900io.h
v2.4.33/vice/src/arch/msdos/: uiscpu64model.c
v2.4.33/vice/src/arch/sdl/: cw-pci.c
v2.4.9-ffmpeg/vice/: Makefile.am  acinclude.m4  configure.proto
v2.4.9-ffmpeg/vice/doc/: vice.txt
v2.4.9-ffmpeg/vice/po/: da.po  de.po  es.po  fr.po  hu.po  it.po  ko.po  nl.po  pl.po  ru.po  sv.po  tr.po
v2.4.9-ffmpeg/vice/src/: Makefile.am
v2.4.9-ffmpeg/vice/src/gfxoutputdrv/: ffmpegdrv.c  ffmpegdrv.h  ffmpeglib.c
v2.4.9-ffmpeg/vice/src/lib/: Makefile.am
v2.4.9-ffmpeg/vice/src/lib/archives/: Makefile.am
v2.4.9-ffmpeg/vice/src/lib/ffmpeg/: configure.gnu
v2.4.9-ffmpeg/vice/src/lib/libffmpeg/: Makefile
v2.4.9-ffmpeg/vice/src/lib/liblame/: acinclude.m4  aclocal.m4  config.h.in  configure.in
v2.4.9-ffmpeg/vice/src/lib/libx264/: Makefile
v2.4.9-ffmpeg/vice/src/monitor/: mon_lex.c
vice/: configure.proto
vice-2.4.26/vice/data/: Makefile.am
vice-2.4.26/vice/src/: main4510cpu.c  main4510cpu.h
vice-2.4.26/vice/src/c65/: Makefile.am  c65cpu.c
vice-2.4.26/vice/src/viciii/: Makefile.am
vice/src/arch/gtk3/widgets/: driveextendpolicywidget.h  georamwidget.c  georamwidget.h
vice/src/c64/cart/: magicdesk.c
virtual-devices-fixes-r31792/vice/src/c64/: c64export.c
(+16 files in other folders)
