AM_CPPFLAGS = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/joyport \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/c64/cart \
	-I$(top_srcdir)/src/lib/p64 \
	-I$(top_srcdir)/src/c64dtv

noinst_LIBRARIES = libviciii.a

libviciii_a_SOURCES = \
	viciii-badline.c \
	viciii-badline.h \
	viciii-clock-stretch.c \
	viciii-cmdline-options.c \
	viciii-cmdline-options.h \
	viciii-color.c \
	viciii-color.h \
	viciii-draw.c \
	viciii-draw.h \
	viciii-fetch.c \
	viciii-fetch.h \
	viciii-irq.c \
	viciii-irq.h \
	viciii-mem.c \
	viciii-mem.h \
	viciii-phi1.c \
	viciii-phi1.h \
	viciii-resources.c \
	viciii-resources.h \
	viciii-snapshot.c \
	viciii-snapshot.h \
	viciii-sprites.c \
	viciii-sprites.h \
	viciii-stubs.c \
	viciii-timing.c \
	viciii-timing.h \
	viciii.c \
	viciiitypes.h
